/**
 * Copyright 2010-2020 interactive instruments GmbH
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package de.interactive_instruments.etf.dal.dto.result;

import java.util.List;

import de.interactive_instruments.etf.dal.dto.Arguments;

public class TestCaseResultDto extends ResultModelItemDto {

    // Optional arguments for parameterizable test cases
    private Arguments arguments;

    public TestCaseResultDto() {}

    private TestCaseResultDto(final TestCaseResultDto other) {
        super(other);
        this.arguments = other.arguments;
    }

    public List<TestStepResultDto> getTestStepResults() {
        return (List<TestStepResultDto>) getChildren();
    }

    public void setTestStepResults(final List<TestStepResultDto> testStepResults) {
        setChildren(testStepResults);
    }

    public void addTestStepResult(final TestStepResultDto testStepResult) {
        addChild(testStepResult);
    }

    public Arguments getArguments() {
        return arguments;
    }

    public void setArguments(final Arguments argumentsDto) {
        this.arguments = argumentsDto;
    }

    @Override
    public TestCaseResultDto createCopy() {
        return new TestCaseResultDto(this);
    }
}
