/**
 * Copyright 2010-2020 interactive instruments GmbH
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package de.interactive_instruments.etf.dal.dto.result;

import java.util.List;

public class TestModuleResultDto extends ResultModelItemDto {

    public TestModuleResultDto() {}

    private TestModuleResultDto(final TestModuleResultDto other) {
        super(other);
    }

    public List<TestCaseResultDto> getTestCaseResults() {
        return (List<TestCaseResultDto>) getChildren();
    }

    public void setTestCaseResults(final List<TestCaseResultDto> testCaseResults) {
        setChildren(testCaseResults);
    }

    public void addTestCaseResult(final TestCaseResultDto testCaseResult) {
        addChild(testCaseResult);
    }

    @Override
    public TestModuleResultDto createCopy() {
        return new TestModuleResultDto(this);
    }
}
